--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,4 +11,14 @@
         <servlet-name>FirstServlet</servlet-name>
         <url-pattern>/servlet</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>FirstJSP</servlet-name>
+        <jsp-file>/firstJSP.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>FirstJSP</servlet-name>
+        <url-pattern>/first-jsp</url-pattern>
+    </servlet-mapping>
+
 </web-app>
